test/users/jglewis/wrong_error_message_april_26_2010-variant1.good
wrong_error_message_april_26_2010-variant1.chpl:13: In function 'main':
wrong_error_message_april_26_2010-variant1.chpl:20: error: illegal use of function that does not return a value: 'generate_and_analyze_nD_torus'
